# eosio.assert

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md  UnitTestsExternalProject.txt
eosio.assert/: CMakeLists.txt  build.sh
eosio.assert/abi/: eosio.assert.abi
eosio.assert/include/eosio.assert/: eosio.assert.hpp
eosio.assert/src/: eosio.assert.cpp
tests/: .gitignore  CMakeLists.txt  contracts.hpp.in  eosio.assert_tests.cpp  eosio.system_tester.hpp  eosio.system_tests.cpp  eosio_assert_tests.cpp
tests/data/: add_manifest.expected  bootstrap.expected  require.expected  require_abi_hash.expected  setchain.expected
tests/test_contracts/: eosio.bios.wasm
